--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.5
   geolocator: ^12.0.0
+  google_maps_flutter: ^2.7.0
   permission_handler: ^11.3.1
 
 dev_dependencies:
